# Playing_with_GFN

./: Experiments.ipynb  my_personal_func_test.py  pyproject.toml
mols/: mars.py  mars_activelearning.py  model_atom.py  model_block.py  model_fingerprint.py  mol_mdp_ext.py  pyg_utils.py
mols/utils/: chem.py  molMDP.py
